<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MailMyIp</string>
    <string name="txt_menu_settings">Settings</string>
    <string name="Labelip">Your External IP address:</string>
    <string name="ip">test</string>
    <string name="help">Help</string>
    <string name="txt_menu_exit">Exit</string>
    <string name="txt_settings_email">Email Address:</string>
    <string name="txt_settings_details">User details:</string>
    <string name="txt_settings_name">Name:</string>
    <string name="txt_settings_location">Include location in mail</string>
    <string name="txt_settings_ip">Include All ipaddresses</string>
    <string name="txt_settings_time">Include system time and date</string>

</resources>
